compatibility with jdk 8 and removed user names