@@ -2,6 +2,8 @@ package hds_user;
 
 import java.io.FileInputStream;
 import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.security.KeyFactory;
 import java.security.NoSuchAlgorithmException;
 import java.security.PrivateKey;
@@ -15,12 +17,12 @@ import java.util.List;
 public class User {
 
 	private static List<Good> setOfGoods;
-	private final String name;
+	private final int uid;
 	private PublicKey publicKey;
 	private PrivateKey privateKey;
 
-	public User(String name) {
-		this.name = name;
+	public User(int id) {
+		this.uid = id;
 		loadPubKey();
 		loadPrivKey();
 		setOfGoods = new ArrayList<>();
@@ -28,30 +30,27 @@ public class User {
 
 	private void loadPubKey(){
 		try{
-
-			FileInputStream fis = new FileInputStream("src/main/resources/" + name + "public_key.txt");
-			byte[] pub = fis.readAllBytes();
-			fis.close();
+			byte[] pub = Files.readAllBytes(Paths.get("./src/main/resources/" + uid + "_public_key.txt"));
 			X509EncodedKeySpec keySpec = new X509EncodedKeySpec(pub);
 			KeyFactory kf = KeyFactory.getInstance("EC");
 
 			this.publicKey = kf.generatePublic(keySpec);
 		} catch (IOException | NoSuchAlgorithmException | InvalidKeySpecException e) {
 			e.printStackTrace();
+			System.exit(0);
 		}
 	}
 
 
 	private void loadPrivKey(){
 		try{
-			FileInputStream fis = new FileInputStream("src/main/resources/" + name + "private_key.txt");
-			byte[] priv = fis.readAllBytes();
-			fis.close();
+			byte[] priv = Files.readAllBytes(Paths.get("./src/main/resources/" + uid + "_private_key.txt"));
 			PKCS8EncodedKeySpec ks = new PKCS8EncodedKeySpec(priv);
 			KeyFactory kf = KeyFactory.getInstance("EC");
 			this.privateKey = kf.generatePrivate(ks);
 		} catch (IOException | NoSuchAlgorithmException | InvalidKeySpecException e) {
 			e.printStackTrace();
+			System.exit(0);
 		}
 	}
 
